23-07 fix CLS issue
- cumulative layout shift
- use bootstrap ratio

--- a/styles/post-detail.css
+++ b/styles/post-detail.css
@@ -21,6 +21,7 @@ section.hero {
 .post-detail .post-image {
   width: 100%;
   margin-bottom: 1rem;
+  object-fit: cover;
 }
 
 .post-detail .post-image:hover {
